--- a/piplelinebackend/src/main/resources/application.properties
+++ b/piplelinebackend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=cruddemo
 server.port=9099
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3006/backend
-spring.datasource.username=root
-spring.datasource.password=jaXY31$@22
+spring.datasource.url=jdbc:mysql://database-1.cm5ikyii4h6n.us-east-1.rds.amazonaws.com:3306/backend
+spring.datasource.username=admin
+spring.datasource.password=adminadmin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
